traefik/l5d-header.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-header
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: web.linkerd-viz.svc.cluster.local:8084
