traefik/whitelist.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: local-whitelist
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.0/24
