traefik/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.claytonc.dev`)
      kind: Rule
      middlewares:
        - name: local-whitelist
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-tls
